Creating a createLink helper to map to ractive files based on name

--- a/docs/0.3.9/API reference.md.hbs
+++ b/docs/0.3.9/API reference.md.hbs
@@ -11,26 +11,26 @@ Create a new Ractive instance. See <a href="{{relative absolute 'latest/initiali
 
 ## Instance properties
 
-* <a href="{{relative absolute 'latest/ractive-nodes'}}">ractive.nodes</a>
-* <a href="{{relative absolute 'latest/ractive-transitions'}}">ractive.transitions</a>
-* <a href="{{relative absolute 'latest/ractive-partials-instance'}}">ractive.parials</a>
+* {{{createLink 'ractive.nodes'}}}
+* {{{createLink 'ractive.transitions'}}}
+* {{{createLink 'ractive-partials-instance' 'ractive.parials'}}}
 
 
 ## Instance events
 
-See <a href="{{relative absolute 'latest/events'}}">Events</a>.
+See {{{createLink 'Events'}}}
 
 ## Static methods
 
-* <a href="{{relative absolute 'latest/ractive-parse'}}">Ractive.parse()</a>
-* <a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a>
+* {{{createLink 'Ractive.parse()'}}}
+* {{{createLink 'Ractive.extend()'}}}
 ...more to come...
 
 ## Plugins and shared properties
 
-* <a href="{{relative absolute 'latest/adaptors'}}">Adapators</a>
-* <a href="{{relative absolute 'latest/events'}}">Ractive.eventDefinitions</a>
-* <a href="{{relative absolute 'latest/ractive-easing'}}">Ractive.easing</a>
-* <a href="{{relative absolute 'latest/partials'}}">Partials</a>
-* <a href="{{relative absolute 'latest/transitions'}}">Transitions</a>
+* {{{createLink 'Adapators'}}}
+* {{{createLink 'events' 'Ractive.eventDefinitions'}}}
+* {{{createLink 'Ractive.easing'}}}
+* {{{createLink 'Partials'}}}
+* {{{createLink 'Transitions'}}}
 ...more to come...
