--- a/docs/0.3.9/Components.md.hbs
+++ b/docs/0.3.9/Components.md.hbs
@@ -3,7 +3,7 @@ title: Components
 ---
 In many situations, you want to encapsulate behaviour and markup into a single reusable *component*, which can be dropped in to Ractive applications.
 
-First, you need to **create the component** with <a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a>, which allows you to define a template, initialisation behaviour, default data, and so on. (If you're not familiar with Ractive.extend() you should read that page first.)
+First, you need to **create the component** with {{{createLink 'Ractive.extend()'}}}, which allows you to define a template, initialisation behaviour, default data, and so on. (If you're not familiar with Ractive.extend() you should read that page first.)
 
 ## Initialisation Options
 
