--- a/docs/0.3.9/Dependants.md.hbs
+++ b/docs/0.3.9/Dependants.md.hbs
@@ -14,7 +14,7 @@ If you have a mustache which depends on `foo.bar`, and `foo` changes, it's quite
 
 This relationship is expressed through the `_depsMap` property of a Ractive instance - whenever `foo` changes, as well as dealing with direct `foo` dependants we check the map for those indirect dependants.
 
-In the case of [[expressions]] and [[observers]], we also need to consider dependants of *upstream keypaths*. For example, suppose we have a section based on a sorted array - if we modify one of the members of the array, we need to see if the sort order has changed or not as a result:
+In the case of {{{createLink 'expressions'}}} and {{{createLink 'observers'}}}, we also need to consider dependants of *upstream keypaths*. For example, suppose we have a section based on a sorted array - if we modify one of the members of the array, we need to see if the sort order has changed or not as a result:
 
 ```html
 \{{#( sort( list, 'name' ) )}}
@@ -45,11 +45,11 @@ ractive.set( 'list[0].name', 'Zebediah' );
 
 In the example, setting `list[0].name` causes dependants of `list` to be updated.
 
-As well as expressions, [[observers]] respond to both upstream and downstream changes.
+As well as {{{createLink  'expressions'}}}, {{{createLink 'Observers'}}} respond to both upstream and downstream changes.
 
 
 ## Expressions with multiple dependencies
 
-The expression `\{{ a + b }}` has two dependencies - `a` and `b` (or more accurately, whatever those [[references]] resolve to). The `_deps` graph actually includes objects representing those individual references, rather than the expression itself - the reference objects then notify the expression (if their value has changed) that it will need to re-evaluate itself.
+The expression `\{{ a + b }}` has two dependencies - `a` and `b` (or more accurately, whatever those {{{createLink 'references'}}} resolve to). The `_deps` graph actually includes objects representing those individual references, rather than the expression itself - the reference objects then notify the expression (if their value has changed) that it will need to re-evaluate itself.
 
 Because the expression has multiple dependencies, it won't trigger an update straight away - it will wait until all the new data has come in first. So doing `ractive.set({ a: 1, b: 2 })` will only trigger one update, not two.
