--- a/docs/0.3.9/Expressions.md.hbs
+++ b/docs/0.3.9/Expressions.md.hbs
@@ -45,7 +45,7 @@ These are, of course, JavaScript expressions. Almost any valid JavaScript expres
 * No function literals (i.e. anything that involves the `function` keyword)
 * No regular expression literals (this may change in future!)
 
-Aside from a subset of global objects (e.g. `Math`, `Array`, `parseInt`, `encodeURIComponent` - full list below), any references must be to properties (however deeply nested) of the Ractive instance's data, rather than arbitrary variables. Reference resolution follows the [normal process](References).
+Aside from a subset of global objects (e.g. `Math`, `Array`, `parseInt`, `encodeURIComponent` - full list below), any references must be to properties (however deeply nested) of the Ractive instance's data, rather than arbitrary variables. Reference resolution follows the {{{createLink 'references' 'normal process'}}}.
 
 
 ## Does this use `eval`?
