--- a/docs/0.3.9/Partials.md.hbs
+++ b/docs/0.3.9/Partials.md.hbs
@@ -36,12 +36,12 @@ ractive = new Ractive({
 });
 ```
 
-Here, `myThumbnailPartial` can be a [string template](templates) or a [parsed template](preparsing).
+Here, `myThumbnailPartial` can be a {{{createLink 'templates' 'string template'}}} or a {{{createLink 'preparsing' 'parsed template'}}}.
 
 
 ### As a globally available partial
 
-Equally, you can make partials globally available by adding them to [Ractive.partials](ractive-partials-global):
+Equally, you can make partials globally available by adding them to {{{createLink 'ractive-partials-global' 'Ractive.partials'}}}:
 
 ```js
 Ractive.partials.thumbnail = myThumbnailPartial;
@@ -65,7 +65,8 @@ This method is particularly convenient if you don't want to load templates via A
 
 The `type` attribute isn't important, as long as it exists and isn't `text/javascript`. All that matters is that it's a script tag whose `id` attribute matches the name of the partial.
 
-Internally, when a template requests the `\{{>thumbnail}}` partial, Ractive will look for it on [ractive.partials](ractive-partials-instance), then [Ractive.partials](ractive-partials-global), and if both of those fail it will then look for an element with an `id` of `thumbnail`. If it exists, it will parse its content and store it on [Ractive.partials](ractive-partials-global), to make subsequent lookups quicker.
+Internally, when a template requests the `\{{>thumbnail}}` partial, Ractive will look for it on {{{createLink 'ractive-partials-instance' 'ractive.partials'}}}, then [Ractive.partials](ractive-partials-global), and if both of those fail it will then look for an element with an `id` of `thumbnail`. If it exists, it will parse its content and store it on {{{createLink 'ractive-partials-global' 'Ractive.partials'}}}, to make subsequent lookups quicker.
+
 
 
 ### Inline partials
@@ -179,7 +180,7 @@ ractive = new Ractive({
 });
 ```
 
-Or you might make it possible to [extend](ractive-extend) a subclass without overriding its template:
+Or you might make it possible to {{{createLink 'ractive-extend' 'extend'}}} a subclass without overriding its template:
 
 ```html
 <div class='modal-background'>
