--- a/docs/0.3.9/Plugins.md.hbs
+++ b/docs/0.3.9/Plugins.md.hbs
@@ -2,10 +2,10 @@
 title: Plugins
 section: Plugins
 ---
-Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - see the [[Plugin APIs]] page and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.
+Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - see the {{{createLink 'Plugin APIs'}}} page and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.
 
 
-## [[Adaptors]]
+## {{{createLink 'Adaptors'}}}
 
 * [Backbone](http://ractivejs.org/examples/backbone)
 * [Promises](http://lluchs.github.io/Ractive-adaptors-Promise/) - contributed by [@lluchs](https://github.com/lluchs)
@@ -13,12 +13,12 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 * TODO Object.observe
 
 
-## [[Decorators]]
+## {{{createLink 'Decorators'}}}
 
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
 
 
-## [[Events]]
+## {{{createLink 'Events'}}}
 
 * [Tap](http://ractivejs.github.io/Ractive-events-tap)
 * [Hover](http://ractivejs.github.io/Ractive-events-hover)
@@ -28,7 +28,7 @@ Plugins allow you to augment Ractive with extra functionality. You can create yo
 * [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 
 
-## [[Transitions]]
+## {{{createLink 'Transitions'}}}
 
 * [Fade](http://ractivejs.github.io/Ractive-transitions-fade)
 * [Slide](http://ractivejs.github.io/Ractive-transitions-slide)
