--- a/docs/0.3.9/Ractive.easing.md.hbs
+++ b/docs/0.3.9/Ractive.easing.md.hbs
@@ -1,7 +1,7 @@
 ---
 title: Ractive.easing
 ---
-This is a set of globally available easing functions, which are used with [[ractive.animate()]] and in some [[transitions]].
+This is a set of globally available easing functions, which are used with {{{createLink 'ractive.animate()'}}} and in some {{{createLink 'transitions'}}}.
 
 Four are included by default - `linear`, `easeIn`, `easeOut` and `easeInOut`.
 
