--- a/docs/0.3.9/Ractive.js documentation.md.hbs
+++ b/docs/0.3.9/Ractive.js documentation.md.hbs
@@ -4,13 +4,13 @@ These pages aim to provide all the information you need to master Ractive, inclu
 
 If you see something wrong, out of date, or missing from this documentation, please [raise an issue on GitHub](https://github.com/RactiveJS/docs.ractivejs.org/issues) or - even better - submit a pull request. Your fellow Ractive users will thank you!
 
-* [[60-second setup]]
-* [[Glossary]]
-* [[Tips]]
-* [[Plugins]]
-* [[API reference]]
-* [[Mustaches]] (templating)
-* [[Troubleshooting]]
+* {{{createLink '60-second setup'}}}
+* {{{createLink 'Glossary'}}}
+* {{{createLink 'Tips'}}}
+* {{{createLink 'Plugins'}}}
+* {{{createLink 'API reference'}}}
+* {{{createLink 'Mustaches'}}} (templating)
+* {{{createLink 'Troubleshooting'}}}
 
 Other links
 -----------
