--- a/docs/0.3.9/Ractive.parse().md.hbs
+++ b/docs/0.3.9/Ractive.parse().md.hbs
@@ -3,7 +3,7 @@ title: Ractive.parse()
 ---
 Before templates can be used, they must be parsed. Parsing involves reading in a template string and converting it to a tree-like data structure, much like a browser's parser would.
 
-Ordinarily, parsing happens automatically. However you can use `Ractive.parse()` as a standalone function if, for example, you want to parse templates as part of your build process (it works in Node.js). See also [[Using Ractive with RequireJS]].
+Ordinarily, parsing happens automatically. However you can use `Ractive.parse()` as a standalone function if, for example, you want to parse templates as part of your build process (it works in Node.js). See also {{{createLink 'Using Ractive with RequireJS'}}}.
 
 The output of `Ractive.parse()` is an array or object (depending on whether the template contains [inline partials](partials#inline-partials) or not). Here's an example:
 
