--- a/docs/0.3.9/Templates.md.hbs
+++ b/docs/0.3.9/Templates.md.hbs
@@ -1,7 +1,7 @@
 ---
 title: Templates
 ---
-In Ractive, templates (until they get [parsed](ractive-parse), at least) are just snippets of HTML, with a few differences. A template should be *well-formed* - Ractive's parser is not quite as forgiving as the HTML parsers found in browsers (though it does allow things like implicitly closed elements).
+In Ractive, templates (until they get {{{createLink 'ractive-parse' 'parsed'}}}, at least) are just snippets of HTML, with a few differences. A template should be *well-formed* - Ractive's parser is not quite as forgiving as the HTML parsers found in browsers (though it does allow things like implicitly closed elements).
 
 Strictly speaking, a Ractive template is not valid HTML (for one thing, 'valid HTML' describes an entire document, and we're only dealing with snippets), but *it doesn't matter*, even if you're the kind of obsessive who can't stand a single error in the [W3C validator](http://validator.w3.org/), because it all comes out as lovely standards-compliant DOM.
 
@@ -9,7 +9,7 @@ For reference, however, the differences between Ractive templates and HTML are l
 
 ## Mustaches
 
-The most obvious difference is that Ractive templates contain [[mustaches]] to facilitate data binding.
+The most obvious difference is that Ractive templates contain {{{createLink 'mustaches'}}} to facilitate data binding.
 
 ## Proxy event directives
 
@@ -21,7 +21,7 @@ Elements in a Ractive template can have [proxy events](events#proxy-events), whi
 
 ## Transitions
 
-Another item in the set of things-that-look-like-attributes-but-aren't, [[transitions]] allow you to specify how elements should behave when they first get introduced to the DOM and when they get removed from it later:
+Another item in the set of things-that-look-like-attributes-but-aren't, {{{createLink 'transitions'}}} allow you to specify how elements should behave when they first get introduced to the DOM and when they get removed from it later:
 
 ```html
 <div intro='fadeIn'>This element will fade in gradually when it renders</div>
