--- a/docs/0.3.9/Tips.md.hbs
+++ b/docs/0.3.9/Tips.md.hbs
@@ -4,13 +4,12 @@ title: Tips
 Using Ractive with...
 ---------------------
 
-* [...Backbone](using-ractive-with-backbone)
-* [...RequireJS](using-ractive-with-requirejs)
-* [...Browserify](using-ractive-with-browserify)
-* [...promises and deferreds](using-ractive-with-promises-and-deferreds)
-* [...jQuery Mobile](using-ractive-with-jquery-mobile)
+* {{{createLink 'using-ractive-with-backbone' '...Backbone'}}}
+* {{{createLink 'using-ractive-with-requirejs' '...RequireJS'}}}
+* {{{createLink 'using-ractive-with-browserify' '...Browserify'}}}
+* {{{createLink 'using-ractive-with-promises-and-deferreds' '...promises and deferreds'}}}
+* {{{createLink 'using-ractive-with-jquery-mobile' '...jQuery Mobile'}}}
 <!-- TODO * [...Underscore (and other utility libraries)](using-ractive-with-underscore) -->
-
 
 Building an app with Ractive
 ----------------------------
@@ -21,4 +20,4 @@ Unlike mega-frameworks like Angular and Ember, Ractive doesn't have an opinion a
 
 This section is designed to help with that, by collecting tips and advice. If you think your experience can help other developers, please add it to the wiki!
 
-* [[Routing]]
+* {{{createLink 'Routing'}}}
