--- a/docs/0.3.9/ractive.animate().md.hbs
+++ b/docs/0.3.9/ractive.animate().md.hbs
@@ -2,7 +2,7 @@
 title: ractive.animate()
 ---
 
-Similar to [[ractive.set()]], this will update the data and re-render any affected mustaches (and notify [[observers]]).
+Similar to {{{createLink 'ractive.set()'}}}, this will update the data and re-render any affected mustaches (and notify {{{createLink 'observers'}}}).
 
 All animations are handled by a global timer that is shared between Ractive instances (and which only runs if there are one or more animations still in progress), so you can trigger as many separate animations as you like without worrying about timer congestion. Where possible, `requestAnimationFrame` is used rather than `setTimeout`.
 
@@ -22,7 +22,7 @@ If an animation is started on a keypath which is *already* being animated, the f
 > ### ractive.animate( keypath, value[, options] )
 > Returns an `Object` with a `stop` method, which cancels the animation.
 > > #### **keypath** *`String`*
-> > The [keypath](keypaths) to animate.
+> > The {{{createLink 'keypaths' 'keypath'}}} to animate.
 > > #### **value** *`Number` or `String` or `Object` or `Array`*
 > > The value to animate to.
 > > #### options *`Object`*
@@ -30,7 +30,7 @@ If an animation is started on a keypath which is *already* being animated, the f
 > > > #### duration *`Number`*
 > > > Defaults to 400. How many milliseconds the animation should run for
 > > > #### easing *`String` or `Function`*
-> > > Defaults to `'linear'`. The name of an easing function on [[Ractive.easing]], or the easing function itself
+> > > Defaults to `'linear'`. The name of an easing function on {{{createLink 'Ractive.easing'}}}, or the easing function itself
 > > > #### step *`Function`*
 > > > A function to be called on each step of the animation. Receives `t` and `value` as arguments, where `t` is the animation progress (between 0 and 1, as determined by the easing function) and `value` is the intermediate value at `t`
 > > > #### complete *`Function`*
