--- a/docs/0.3.9/ractive.get().md.hbs
+++ b/docs/0.3.9/ractive.get().md.hbs
@@ -2,7 +2,7 @@
 title: ractive.get()
 ---
 > ### ractive.get( keypath )
-> Returns the value at `keypath` (see [[Keypaths]])
+> Returns the value at `keypath` (see {{{createLink 'Keypaths'}}})
 
 > ### ractive.get()
 > Returns all data (the equivalent of `ractive.data`)
