--- a/docs/0.3.9/ractive.updateModel().md.hbs
+++ b/docs/0.3.9/ractive.updateModel().md.hbs
@@ -1,7 +1,7 @@
 ---
 title: ractive.updateModel()
 ---
-If you programmatically manipulate inputs and other elements that have [[two‐way binding]] set up, your model can get out of sync. In these cases, we need to force a resync with `ractive.updateModel()`:
+If you programmatically manipulate inputs and other elements that have {{{createLink 'two‐way binding'}}} set up, your model can get out of sync. In these cases, we need to force a resync with `ractive.updateModel()`:
 
 ```js
 ractive = new Ractive({
