--- a/docs/0.3.9/Notes.md.hbs
+++ b/docs/0.3.9/Notes.md.hbs
@@ -1,7 +1,7 @@
 ---
 title: Notes
 ---
-* [[Valid selectors]]
-* [[Preparsing]]
+* {{{createLink 'Valid selectors'}}}
+* {{{createLink 'Preparsing'}}}
 
 TODO...
