--- a/docs/0.3.9/ractive.merge().md.hbs
+++ b/docs/0.3.9/ractive.merge().md.hbs
@@ -16,4 +16,4 @@ In some situations that won't work, because the arrays contain objects, which ma
 > > > #### compare *`Boolean` or `String` or `Function`*
 > > > If `true`, values will be stringified (with `JSON.stringify`) before comparison. If you pass a string such as `"id"`, array members will be compared on the basis of their properties of that name. Alternatively, pass a function that returns a value with which to compare array members.
 > > > #### complete *`Function`*
-> > > A function that will be called after any [[transitions]] triggered by the merge are complete.
+> > > A function that will be called after any {{{createLink 'transitions'}}} triggered by the merge are complete.
