--- a/docs/0.3.9/ractive.on().md.hbs
+++ b/docs/0.3.9/ractive.on().md.hbs
@@ -1,7 +1,7 @@
 ---
 title: ractive.on()
 ---
-Subscribe to [[events]].
+Subscribe to {{{createLink 'events'}}}.
 
 > ### ractive.on( eventName, handler )
 > Returns an `Object` with a `cancel` method, which removes the handler.
