--- a/docs/0.3.9/ractive.set().md.hbs
+++ b/docs/0.3.9/ractive.set().md.hbs
@@ -1,16 +1,16 @@
 ---
 title: ractive.set()
 ---
-Updates data and triggers a re-render of any mustaches that are affected (directly or indirectly) by the change. Any [[observers]] of affected [[keypaths]] will be notified.
+Updates data and triggers a re-render of any mustaches that are affected (directly or indirectly) by the change. Any {{{createLink 'observers'}}} of affected {{{createLink 'keypaths'}}} will be notified.
 
-A `set` [event](events) will be fired with `keypath` and `value` as arguments (or `map`, if you set multiple options at once).
+A `set` {{{createLink 'events' 'event'}}} will be fired with `keypath` and `value` as arguments (or `map`, if you set multiple options at once).
 
 
 > ### ractive.set( keypath, value[, complete ])
 > Returns `ractive`
 
 > > #### **keypath** *`String`*
-> > The [keypath](keypaths) of the data we're changing, e.g. `user` or `user.name` or `user.friends[1]`
+> > The {{{createLink 'keypaths' 'keypath'}}} of the data we're changing, e.g. `user` or `user.name` or `user.friends[1]`
 
 > > #### **value**
 > > The value we're changing it to. Can be a primitive or an object (or array), in which case dependants of *downstream keypaths* will also be re-rendered (if they have changed)
