--- a/docs/0.3.9/Adaptors.md.hbs
+++ b/docs/0.3.9/Adaptors.md.hbs
@@ -229,7 +229,7 @@ boxAdaptor = {
 };
 ```
 
-You can see this adaptor in action [in a JSFiddle here](http://jsfiddle.net/rich_harris/ATAgH/). Notice that because our wrapper includes a `set` method, {{{createLink 'two-way binding'}} works seamlessly.
+You can see this adaptor in action [in a JSFiddle here](http://jsfiddle.net/rich_harris/ATAgH/). Notice that because our wrapper includes a `set` method, {{{createLink 'two-way binding'}}} works seamlessly.
 
 
 Adding polish
